--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,36 +4,76 @@
 }
 
 body {
-	background-color: #f0db4f;
+	background-image: url('https://content.thriveglobal.com/wp-content/uploads/2018/01/o-MEDITATION-facebook.jpg?w=1550');
+	background-repeat: no-repeat;
+	background-size: auto;
 }
+
 
 h1, p {
 	font-family: sans-serif;
 	text-align: center;
-	color: #323330;
-	font-size:  100px;
+	color: #5E85A7;
+	font-size:  60px;
 }
 
 
 p {
-	font-size: 30px;
+	font-size: 20px;
 }
 
 #output, #container {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
+	display: flex;
+	  flex-direction: column;
+	justify-content: center;
+	margin-top: 60px;
 }
 
 
 input {
-    background-color: #eee;
-    border: none;
-    font-family: sans-serif;
-    color: #000;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 30px;
+	background-color: #fff;
+	border: solid;
+	font-family: sans-serif;
+	color: #000;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 20px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	  color: grey;
+	    opacity: 0.3; /* Firefox */
+    }
+
+
+/* Split the screen in half */
+.split {
+	height: 100%;
+	width: 50%;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	overflow-x: hidden;
+	padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+	left: 0;
+}
+
+/* Control the right side */
+.right {
+	right: 0;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
 }
