--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,12 +14,20 @@ h1, p {
 	font-family: sans-serif;
 	text-align: center;
 	color: #5E85A7;
-	font-size:  60px;
+	font-size:  40px;
+
 }
 
 
 p {
 	font-size: 20px;
+}
+
+h2, p {
+	font-family: sans-serif;
+	text-align: center;
+	color: #A7844D;
+	font-size:  30px;
 }
 
 #output, #container {
@@ -32,7 +40,8 @@ p {
 
 input {
 	background-color: #fff;
-	border: solid;
+	border: hidden;
+	opacity: 0.7;
 	font-family: sans-serif;
 	color: #000;
 	padding: 15px 32px;
