--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url('https://content.thriveglobal.com/wp-content/uploads/2018/01/o-MEDITATION-facebook.jpg?w=1550');
+	background-color: white;
 	background-repeat: no-repeat;
 	background-size: auto;
 }
@@ -13,11 +13,92 @@ body {
 h1, p {
 	font-family: sans-serif;
 	text-align: center;
-	color: #5E85A7;
+	color: #FFFFFF;
 	font-size:  40px;
 
 }
 
+.grid-container {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-gap: 10px;
+	padding: 0 0px 0px 0px;
+}
+
+.grid-item-toolbar {
+	grid-column: 1 / 4;
+	color: azure;
+	height: 80px;
+	background-color: #F2F0F0;
+}
+
+.grid-item-toolbar_title {
+	grid-column: 2 / 4;
+	text-align: center;
+	color: azure;
+	height: 80px;
+	background-color: #F2F0F0;
+}
+
+
+.grid-container > div {
+
+	padding: 0;
+	font-size: 35px;
+}
+
+button:active{
+	transform:scale(1.1);
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.0);
+}
+
+button:disabled {
+	cursor: not-allowed;
+	pointer-events: none;
+	opacity: 0.5;
+}
+
+.play {
+	background: dodgerblue;
+	color: white;
+	text-align: center;
+	padding: 20px 0;
+	font-size: 20px;
+	width: 70px;
+	height: 70px;
+	border: none;
+	border-radius: 50px;
+	box-shadow:2px 2px 10px rgba(0,0,0,0.3);
+}
+
+
+.button_up {
+	width: 70px;
+	height: 150px;
+	border: none;
+	background: url("../arrows/up.png") no-repeat bottom;
+}
+
+.button_down {
+	width: 70px;
+	height: 150px;
+	border: none;
+	background: url("../arrows/down.png") no-repeat bottom;
+}
+
+.button_left {
+	width: 150px;
+	height: 80px;
+	border: none;
+	background: url("../arrows/left.png") no-repeat bottom;
+}
+
+.button_right {
+	width: 150px;
+	height: 80px;
+	border: none;
+	background: url("../arrows/right.png") no-repeat bottom;
+}
 
 p {
 	font-size: 20px;
@@ -56,11 +137,10 @@ input {
 	    opacity: 0.3; /* Firefox */
     }
 
-
 /* Split the screen in half */
 .split {
 	height: 100%;
-	width: 50%;
+	width: 30%;
 	position: fixed;
 	z-index: 1;
 	top: 0;
@@ -78,11 +158,65 @@ input {
 	right: 0;
 }
 
+.center {
+	left: 30%;
+}
+
 /* If you want the content centered horizontally and vertically */
 .centered {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+	background-color: #76aefc;
+	color: #FFFFFF;
+	cursor: pointer;
+	padding: 18px;
+	font-size: 20px;
+	width: 100%;
+	text-align: center;
+	border: none;
+	outline: none;
+	transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+	background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel, grid-item-toolbar {
+	padding: 10px 18px;
+	background-color: white;
+	display: none;
+	overflow: hidden;
+}
+
+.grid-container_board {
+	display: grid;
+	height: 300px;
+	align-content: center;
+	grid-template-columns: auto auto auto;
+	grid-gap: 10px;
+
+	padding: 10px;
+}
+
+.grid-container_board > div {
+	background-color: rgba(255, 255, 255, 0.8);
+	text-align: center;
+	font-size: 30px;
+	height: 70px;
+	width: 70px;
+	padding-top: 20px;
+}
+.grid-item-board {
+	grid-column: 1 / 4;
 	text-align: center;
 }
